Google Map Demo

--- a/code-app/src/index.html
+++ b/code-app/src/index.html
@@ -11,6 +11,7 @@
   <script src="/lib/semantic-ui/2.2.6/semantic.min.js"></script>
   <script src="/lib/lokijs/1.4.1/lokijs.min.js"></script>
   <script src="/lib/lokijs/1.4.1/loki-indexed-adapter.min.js"></script>
+  <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyC2fm6G8-7oniLZLP3L-9sy9KQZLmd9Al0&libraries=geometry,places,visualization"></script>
 </head>
 <body>
 <div id="root" style="height: 100%"></div>
